# my_vslam_book

./: README.md
ch2/: CMakeLists.txt  helloSlam.cpp
ch3/: CMakeLists.txt  eigenGeometry.cpp  eigenMatrix.cpp
ch3/examples/: gt.txt  plotTrajectory.cpp  trajectory.txt
ch3/visualizeGeometry/: CMakeLists.txt
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  estimated.txt  trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp  myg2o.cpp  myg2o2.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  pose_estimation_2d2d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp  semi_dense.cpp
ch8/cmake/: FindCSparse.cmake  FindG2O.cmake
project/: associate.txt  associator.py  depth2.txt  rgb2.txt
project/direct_0.1/: CMakeLists.txt
project/direct_0.1/config/: default.yaml
project/direct_0.1/include/myslam/: camera.h  common_include.h  config.h  frame.h  g2o_types.h  jacobian.h  map.h  mappoint.h  visual_odometry.h
project/direct_0.1/src/: CMakeLists.txt  camera.cpp  frame.cpp  g2o_types.cpp  map.cpp  mappoint.cpp  visual_odometry.cpp
project/direct_0.1/test/: CMakeLists.txt  myvo copy.cpp  myvo.cpp
